--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Roboto';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h3 {
+  font-size: 30px;
+  font-family: OCR A Std, monospace;
+  color: #015901;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container {
+  display: block;
+  margin-top: 20%;
+  background-color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  background-color: #77DD77;
+  box-shadow: 4px 2px 2px #0000;
+  width: 100%;
+  min-height: 10%;
+  position: absolute;
+  top: 0;
+  z-index: 1000;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  width: auto;
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-left {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.navbar-right {
+  padding-right: 30px;
+}
+
+.navbar-item {
+  font-size: 20px;
+  font-family: OCR A Std, monospace;
+  color: #015901;
 }
